feature: using freemarker templates

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/simplenotepad?useUnicode=true&
 spring.datasource.username=root
 spring.datasource.password=1
 
-spring.mustache.expose-request-attributes=true
+spring.freemarker.expose-request-attributes=true
