--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=root
 spring.datasource.password=1
 
 spring.freemarker.expose-request-attributes=true
+
+upload.path=/home/Projects/simplenotepad/uploads
